<resources>
    <string name="app_name">Planet App</string>
    <string name="payment_one">To make payments from your bKash Account please follow the steps below.
                                (আপনার বিকাশ একাউন্ট থেকে পেমেন্ট করতে নীচের ধাপগুলো অনুসরণ করুন)</string>
    <string name="payment_two">How to make "Payment" with bKash Mobile Menu:
                                (বিকাশ মোবাইল মেন্যুর সাহায্যে যেভাবে "পেমেন্ট" করবেন)</string>
    <string name="text_bulk_sms">“PLANET IT” ‘Web Based International Bulk SMS Gateway Provider. Provides Best in Class Support &amp; Services. Special Fair Pricing for Corporate Users. SMS API for Application Developers.</string>
    <string name="text_push_pull">This service is aimed to provide two way SMS communication. Any organization can provide this service to their target customers to pull information by sending SMS. In reply, customers get a push SMS.</string>
    <string name="text_app_dev">Need a web or mobile application developed? Have an existing application you need to take to the next level? This is exactly what we do all day everyday.</string>
    <string name="text_mobile_topup">Topup any Bangladeshi GSM mobile anytime from online. Our Mobile Topup app will help to recharge your mobile balance instantly with a friction of second.</string>
    <string name="text_bulk_sms_one">Mobile Marketing is the easiest way to promote your business. More than 7 Core people are using Mobile in our country. Let everybody know about you. We will provide the SMS service to reach you in every hand. We provide Low Cost Business SMS Service to reduce your Marketing Cost. Planet IT will provide you new service of most effective Marketing with our Web SMS portal.</string>
    <string name="bulk_sms">Bulk SMS</string>
    <string name="push_pull">Push Pull</string>
    <string name="app_development">App Development</string>
    <string name="mobile_topup">Mobile Topup</string>
    <string name="list_item_lan_settings">language Setting</string>
    <!--<string name="lang_dialog_title">Select Language </string>-->
    <string name="lang_dialog_message">Do You Change Language ?</string>

    <string name="alert_dialog_change_text">Change </string>
    <string name="alert_dialog_cancel_message">Cancel </string>
    <string name="single_sms">Single SMS</string>
    <string name="contacts_sms">Contacts To SMS</string>
    <string name="file_to_sms">File To SMS</string>
    <string name="settings">Settings</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="our_services">Our Services</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="dashboard">Dashboard</string>
    <string name="sms_length_check">SMS Length</string>
    <string name="enter_the_recipients">Enter the recipients</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_message">Send Message</string>
    <string name="choose_file">Choose File</string>
    <string name="view_file_example">View File Example</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_sender_number">Enter Sender Number</string>
    <string name="save">Save</string>
    <string name="reset">Clear</string>
    <string name="user_name">User Name</string>
    <string name="bkash_trxid">bKash TrxId</string>
    <string name="submit">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="view_on_map"><u>View On Map</u></string>


    <string-array name="lang_select">
        <item>Select Language</item>
        <item>বাংলা</item>
        <item>English</item>
    </string-array>

</resources>
